--- a/css/style.css
+++ b/css/style.css
@@ -127,7 +127,7 @@ body {
     border-radius: 10px;
     border-color: #333;
     padding: 10px;
-    width: 40%;
+    /* width: 40%; */
     height: auto;
     box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.2), 0 4px 8px 0 rgba(0, 0, 0, 0.19);
     transition: 0.4s;
@@ -135,7 +135,7 @@ body {
 
 @media (min-width: 1200px) {
     .tarjeta-de-producto {
-        width: 200px;
+        /* width: 200px; */
         border: 1px solid;
         border-radius: 12px;
         border-color: #333;
@@ -165,8 +165,9 @@ body {
 
 
 .titulo-principal-tarjeta {
+    padding-top: 10px;
     text-align: left;
-    font-size: 24px;
+    font-size: 20px;
 }
 
 .boton-principal {
@@ -179,9 +180,10 @@ body {
     text-align: center;
 }
 
-.titulo-principal-tarjeta {
+.titulo-principal-tarjeta-recetas {
+   padding-top: 10px;
     font-weight: 600;
-    font-size: 13px;
+    font-size: 20px;
 }
 
 @media (min-width: 1200px) {
@@ -284,7 +286,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    max-width: 100%;
+    /* max-width: 100%; */
     margin-left: auto;
     margin-right: auto;
     margin-top: 30px;
@@ -292,20 +294,20 @@ body {
 
 @media (min-width:1200px) {
     .contenedor-de-tarjetas {
-        width: 1200px;
+        /* width: 1200px; */
     }
 
 }
 
 .carrusel-de-productos {
-    width: 100%;
+    /* width: 100%; */
     margin-left: auto;
     margin-right: auto;
 }
 
 @media (min-width:1200px) {
     .carrusel-de-productos {
-        width: 1200px;
+        /* width: 1200px; */
     }
 }
 
@@ -343,12 +345,17 @@ body {
 
 @media (min-width:1200px) {
     .linea-horizontal-secciones {
-        width: 1200px;
+        /* width: 1200px; */
     }
 }
 
+.tarjeta-de-receta {
+    width: 100%;
+}
+
+
 .imagen-tarjeta-recetas img {
-    width: 70%;
+    width: 100%;
     height: auto;
     border-radius: 12px;
     margin-top: 20px;
@@ -381,6 +388,7 @@ footer {
 .contenedor-nivel-de-dificultad-recetas {
     display: flex;
     flex-wrap: wrap;
+    align-items: center;
     justify-content: space-between;
     width: 190px;
 }
@@ -404,21 +412,22 @@ footer {
 
 @media (min-width:1200px) {
     .carrusel-video-recetas {
-        width: 1200px;
+        /* width: 1200px; */
     }
 }
 
 .contenedor-tarjetas-recetas {
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
+    /* width: 100%; */
+    /* margin-left: auto;
+    margin-right: auto; */
     margin-top: 5px;
     margin-bottom: 50px;
+    display: flex;
 }
 
 @media (min-width:1200px) {
     .contenedor-tarjetas-recetas {
-        width: 1200px;
+        /* width: 1200px; */
         display: flex;
         justify-content: space-between;
     }
@@ -638,21 +647,26 @@ footer {
 
 /* //TRABAJA CON NOSOTROS// */
 
-.banner-buscar-trabajo{
+.banner-buscar-trabajo {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 80%;
+    /* width: 80%; */
     height: 400px;
     background-color: #D9D9D9;
 }
 
-.titulo-banner-empleo h2{
+.titulo-banner-trabajo h2 {
     font-weight: 600;
     font-size: 55px;
-
+    display: flex;
+    align-items: center;
 }
+
 .form-select {
+    display: flex;
+    align-items: center;
     width: 30%;
     margin: 10px;
+
 }
