--- a/css/style.css
+++ b/css/style.css
@@ -127,10 +127,10 @@ body {
     border-radius: 10px;
     border-color: #333;
     padding: 10px;
-    /* width: 40%; */
-    height: auto;
+    height:250px;
     box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.2), 0 4px 8px 0 rgba(0, 0, 0, 0.19);
     transition: 0.4s;
+    flex: 1;
 }
 
 @media (min-width: 1200px) {
@@ -151,8 +151,11 @@ body {
 
 
 .imagen-principal-tarjeta img {
-    width: 100%;
+    /* width: 100%; */
     height: auto;
+    max-width: 100%;
+    object-fit:cover;
+
 }
 
 @media (min-width: 1200px) {
@@ -161,7 +164,6 @@ body {
         height: 200px;
     }
 }
-
 
 
 .titulo-principal-tarjeta {
@@ -318,7 +320,7 @@ body {
 }
 
 .chip-cesta-compra {
-    margin-top: 5px;
+    margin-top: -2px;
     padding: 0 15px;
     height: 30px;
     color: #EAEBEB;
@@ -327,7 +329,6 @@ body {
     border-radius: 25px;
     background-color: #3F525A;
     font-weight: 600;
-
 }
 
 .chip-contenedor {
@@ -495,8 +496,6 @@ footer {
     }
 }
 
-
-
 .nav-lista li a {
     font-size: 12px;
     list-style: none;
@@ -511,7 +510,6 @@ footer {
 }
 
 
-
 .boton-icono-nav {
     border-radius: 30px 30px 30px 30px;
     border-color: transparent;
@@ -523,7 +521,6 @@ footer {
     align-items: center;
     justify-content: center;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 4px 8px 0 rgba(0, 0, 0, 0.19);
-
 }
 
 .boton-icono-nav:last-child {
@@ -567,8 +564,8 @@ footer {
         top: 0;
 
     }
-
 }
+
 
 .contendor-iconos-nav {
     align-items: flex-start;
@@ -588,7 +585,6 @@ footer {
         justify-content: flex-end;
         margin-bottom: 0;
     }
-
 }
 
 .iconos-del-nav {
@@ -645,7 +641,6 @@ footer {
     .icon-menu-paginas {
         display: none !important;
     }
-
 }
 
 
@@ -784,9 +779,14 @@ margin-right: 50px;
 .texto-tarjeta-precio {
     color: #F06B5F;
     font-weight: 700;
-    margin-top: 4px;
+    margin-top: -2px;
 }
 .texto-tarjeta-iva {
     font-size: 10px;
+}
+
+.btn-link {
+    margin-left: -12px;
+    margin-top: -7px;
 }
 
