--- a/css/style.css
+++ b/css/style.css
@@ -226,9 +226,14 @@ body {
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 40px;
-    padding-top: 12px;
     background-color: #F06B5F;
+    padding-top: 12px;
+}
+
+@media (min-width: 550px) {
+    .banner-rebajas{
+        height: 40px;
+    }
 }
 
 .banner-rebajas p {
@@ -297,8 +302,9 @@ body {
 }
 
 .contenedor-de-tarjetas {
-    display: block;
+    display: flex;
     margin-top: 30px;
+    flex-wrap: wrap;
 }
 
 @media (min-width:550px) {
@@ -314,6 +320,7 @@ body {
     width: 100%;
     margin-left: auto;
     margin-right: auto;
+
 }
 
 @media (min-width:1200px) {
@@ -468,8 +475,7 @@ padding-bottom: 10px;
     .ul-contenedor{
         justify-content: center;
         display: flex;
-        align-items: center;
-}
+    }
 }
 
 @media (min-width: 550px) {
@@ -507,6 +513,9 @@ padding-bottom: 10px;
     }
 }
 
+.menu-ham img{
+    width: 35px;
+}
 
 .menu-ham-paginas {
     display: flex ;
@@ -536,17 +545,15 @@ padding-bottom: 10px;
     width: 20px;
 }
 
-
 @media (min-width:550px) {
     .iconos-del-nav {
         order: 2;
     }
-
-
   
-.nav-lista li{
+.nav-lista li a{
     text-decoration: none;
-    
+    color: #EAEBEB;
+    font-size: 18px; 
 }
 
 
@@ -564,6 +571,7 @@ padding-bottom: 10px;
     flex-direction: row;
     width: 100%;
     height: auto;
+    padding-left: 20px;
 
 }
 
@@ -577,9 +585,9 @@ padding-bottom: 10px;
 
 .iconos-del-nav {
     align-items: center;
-    margin-left: -15px;
     margin-bottom: 10px;
     margin-top: 8px;
+    margin-left: -50px;
 }
 
 .contenedor-nav-paginas .icon-menu-paginas {
