--- a/css/style.css
+++ b/css/style.css
@@ -196,14 +196,21 @@ body {
     }
 }
 
-
+.texto-origen{
+    font-size: 13px;
+    font-weight: 600;
+}
+.texto-tarjeta-origen{
+    font-size: 13px;
+    font-weight: 600;
+}
 .texto-tarjeta {
     font-size: 12px;
     font-weight: 500;
     margin-top: 8px;
     margin-bottom: 15px;
     display: -webkit-box;
-    -webkit-line-clamp: 3;
+    -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -216,9 +223,11 @@ body {
     }
 }
 
+
 .texto-tarjeta-gramos {
     font-weight: 700;
     font-size: 16px;
+    color:#F06B5F;
 }
 
 .banner-rebajas {
@@ -231,7 +240,7 @@ body {
 }
 
 @media (min-width: 550px) {
-    .banner-rebajas{
+    .banner-rebajas {
         height: 40px;
     }
 }
@@ -425,12 +434,7 @@ footer {
     margin-right: auto;
 }
 
-
-
 .contenedor-tarjetas-recetas {
-    /* width: 100%; */
-    /* margin-left: auto;
-    margin-right: auto; */
     margin-top: 5px;
     margin-bottom: 50px;
     display: flex;
@@ -438,7 +442,6 @@ footer {
 
 @media (min-width:550px) {
     .contenedor-tarjetas-recetas {
-        /* width: 1200px; */
         display: flex;
         justify-content: space-between;
     }
@@ -453,11 +456,12 @@ footer {
 }
 
 @media (min-width: 550px) {
-   .navegador-paginas {
-padding: 30px;
-   }
+    .navegador-paginas {
+        padding: 30px;
+    }
 
 }
+
 .logo-principal-blanco img {
     width: 200px;
     height: auto;
@@ -469,17 +473,18 @@ padding: 30px;
     justify-content: center;
 }
 
-.navegador-paginas{
-padding-left: 15px;
-padding-right: 15px;
-padding-bottom: 20px;
+.navegador-paginas {
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-bottom: 20px;
 }
+
 /* .ul-contenedor {
     display: none;
 } */
 
-@media (min-width: 550px){
-    .ul-contenedor{
+@media (min-width: 550px) {
+    .ul-contenedor {
         justify-content: center;
         /* display: flex; */
     }
@@ -490,7 +495,7 @@ padding-bottom: 20px;
         display: flex;
         justify-content: flex-start;
     }
-    
+
     .navegador-paginas {
         display: flex;
         align-items: center;
@@ -510,14 +515,14 @@ padding-bottom: 20px;
 }
 
 
-.menu-ham img{
+.menu-ham img {
     width: 35px;
 }
 
 .menu-ham-paginas {
-  display: flex;
-  display: inline-block;
-  margin-bottom: -40px;
+    display: flex;
+    display: inline-block;
+    margin-bottom: -40px;
 }
 
 
@@ -547,13 +552,13 @@ padding-bottom: 20px;
     .iconos-del-nav {
         order: 2;
     }
-    
-    .nav-lista li a{
+
+    .nav-lista li a {
         text-decoration: none;
         color: #EAEBEB;
-        font-size: 18px; 
+        font-size: 18px;
     }
-    
+
 
     .nav-lista {
         position: relative;
@@ -579,17 +584,6 @@ padding-bottom: 20px;
     }
 }
 
-/* .iconos-del-nav {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 10px;
-    margin-top: 8px;
-    margin-left: -50px;
-} */
-
-
-
 .icon-menu-paginas {
     width: auto;
     height: auto;
@@ -598,20 +592,6 @@ padding-bottom: 20px;
     display: flex;
     align-items: end;
 }
-
-/* .nav-lista {
-    list-style-type: none;
-    font-weight: 600;
-    background-color: #2A3040;
-    width: auto;
-    height: auto;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: end;
-    text-align: center;
-    display: flex;
-} */
-
 
 
 @media (min-width:550px) {
@@ -627,34 +607,36 @@ padding-bottom: 20px;
         align-items: center;
         background-color: #2A3040;
         width: 100%;
-        flex-direction: row; }
-        
-        .nav-lista li {
-            padding: 10px;
-            list-style-type: none;
-            text-decoration:none;}
-            }
-            
-            
-            
-            .icon-menu-paginas {
-                display: none !important;
-            }
-            
-            
-            
-            
-            /* //TRABAJA CON NOSOTROS// */
-            
-            .banner-buscar-trabajo {
-                /* width: 80%; */
-                height: 200px;
-                background-color: #D9D9D9;
-                position: absolute;
-                top: 240px;
-                padding: 0 80px;
-            }
-            
+        flex-direction: row;
+    }
+
+    .nav-lista li {
+        padding: 10px;
+        list-style-type: none;
+        text-decoration: none;
+    }
+}
+
+
+
+.icon-menu-paginas {
+    display: none !important;
+}
+
+
+
+
+/* //TRABAJA CON NOSOTROS// */
+
+.banner-buscar-trabajo {
+    /* width: 80%; */
+    height: 200px;
+    background-color: #D9D9D9;
+    position: absolute;
+    top: 240px;
+    padding: 0 80px;
+}
+
 .titulo-banner-trabajo h2 {
     padding-top: 20px;
     padding-bottom: 20px;
@@ -781,7 +763,7 @@ padding-bottom: 20px;
 /* // PRODUCTO// */
 
 .estrellas img {
-    margin-top: 10px;
+    margin-left: -5px;
 }
 
 .texto-tarjeta-precio {
