--- a/css/style.css
+++ b/css/style.css
@@ -52,16 +52,16 @@ body {
     position: relative;
 }
 
-.navegador-principal {
+/* .navegador-principal {
     position: absolute;
     right: 0;
     display: flex;
     top: 22;
     z-index: 1000;
-}
+} */
 
 
-.navegador {
+/* .navegador {
     list-style-type: none;
     overflow: hidden;
     font-weight: 600;
@@ -73,14 +73,14 @@ body {
     align-items: start;
     text-align: center;
     display: flex;
-}
+} */
 
 /* .contenedor-navegador-principal {
     position: relative;
 } */
 
 
-@media (min-width:550px) {
+/* @media (min-width:550px) {
     .navegador {
         font-weight: 600;
         list-style-type: none;
@@ -93,16 +93,16 @@ body {
         background-color: #2A3040;
         width: 100%;
         flex-direction: row;
-    }
+    } */
 
-    .icon-nav {
+    /* .icon-nav {
         display: none !important;
     }
 
     .navegador-principal {
         position: relative;
     }
-}
+} */
 
 .banner-nav-principal {
     display: flex;
@@ -178,6 +178,7 @@ body {
     font-size: 20px;
     font-weight: 600;
     line-height: 20px;
+    padding-bottom: 16px;
 }
 
 .titulo-principal-tarjeta-clase{
