--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,18 +1,6 @@
-* {
-    margin: 0;
-    padding: 0;
-    font-family: 'Open Sans', sans-serif;
-}
 
-body {
-    background-color: #EAEBEB;
-}
 
-/* .header-principal {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
-}
+
 
 @media (min-width:550px) {
     .header-principal {
@@ -20,10 +8,7 @@ body {
     }
 }
 
-.logo-principal {
-    display: flex;
-    justify-content: flex-start;
-}
+
 
 @media (min-width: 1200px) {
     .logo-principal {
@@ -32,25 +17,22 @@ body {
     }
 }
 
-.logo-principal img {
-    width: 180px;
-    height: auto;
-}
+
 
 @media (min-width: 1200px) {
     .logo-principal img {
         width: 250px;
         height: auto;
     }
-} */
+}
 
-/* .icon-nav {
+.icon-nav {
     width: auto;
     height: auto;
     font-size: 22px;
     color: #2A3040;
     position: relative;
-} */
+}
 
 /* .navegador-principal {
     position: absolute;
@@ -103,14 +85,14 @@ body {
         position: relative;
     }
 } */
-
-/* .banner-nav-principal {
+/* 
+.banner-nav-principal {
     display: flex;
     position: relative;
 
 } */
 
-/* .navegador-principal li a {
+.navegador-principal li a {
     display: block;
     color: #EAEBEB;
     text-align: start;
@@ -118,16 +100,19 @@ body {
     text-decoration: none;
     font-size: 12px;
 
-} */
+}
 
-/* @media (min-width: 550px) {
+@media (min-width: 550px) {
     .navegador-principal li a {
         text-align: center;
         font-size: 16px;
     }
-} */
+}
 
-.tarjeta-de-producto {
+/* .tarjeta-producto {
+    border: 1px solid;
+    border-radius: 10px;
+    border-color: #333;
     padding: 12px;
     max-height: fit-content;
     transition: 0.4s;
@@ -135,10 +120,10 @@ body {
     display: block;
     border-bottom: #3F525A 0.75px solid;
     padding: 30px;
-}
+} */
 
 @media (min-width: 550px) {
-    .tarjeta-de-producto {
+    .tarjeta-producto {
         /* border: 1px solid;
         border-radius: 12px;
         border-color: #333; */
@@ -149,36 +134,36 @@ body {
     }
 }
 
-/* .tarjeta-de-producto:hover {
+/* .tarjeta-producto:hover {
     transform: scale(1.05);
 } */
 
 
-.imagen-principal-tarjeta img {
+/* .tarjeta-producto-imagen img {
     height: auto;
     max-width: 100%;
     object-fit: cover;
     border-radius: 10px;
-}
+} */
 
 @media (min-width: 550px) {
-    .imagen-principal-tarjeta img {
+    .tarjeta-producto-imagen img {
         width: 100%;
         height: 200px;
     }
 }
 
 
-.titulo-principal-tarjeta {
+/* .tarjeta-producto-titulo {
     padding-top: 10px;
     text-align: left;
     font-size: 20px;
     font-weight: 600;
     line-height: 20px;
     padding-bottom: 16px;
-}
+} */
 
-.titulo-principal-tarjeta-clase{
+.tarjeta-producto-titulo-clase{
     font-size: 14px;
     font-weight: 700;
     margin-top: 4px;
@@ -195,14 +180,18 @@ body {
     text-align: center;
 }
 
-.titulo-principal-tarjeta-recetas {
+
+
+/* .tarjeta-receta-titulo {
     padding-top: 10px;
     font-weight: 600;
     font-size: 18px;
-}
+} */
+
+
 
 @media (min-width: 550px) {
-    .texto-tarjeta {
+    .tarjeta-producto-texto {
         font-weight: 600;
         font-size: 15px;
     }
@@ -213,12 +202,12 @@ body {
     font-weight: 600;
 }
 
-.texto-tarjeta-origen {
+/* .tarjeta-producto-texto-origen {
     font-size: 13px;
     font-weight: 600;
-}
+} */
 
-.texto-tarjeta {
+/* .tarjeta-producto-texto {
     font-size: 12px;
     font-weight: 500;
     margin-bottom: 15px;
@@ -227,10 +216,10 @@ body {
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
-}
+} */
 
 @media (min-width: 550px) {
-    .texto-tarjeta {
+    .tarjeta-producto-texto {
         font-size: 14px;
         font-weight: 500;
         margin-top: -13px;
@@ -238,20 +227,20 @@ body {
 }
 
 
-.texto-tarjeta-gramos {
+.tarjeta-producto-texto-gramos {
     font-weight: 700;
     font-size: 16px;
     color: #F06B5F;
 }
 
-.banner-rebajas {
+/* .banner-rebajas {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
     background-color: #F06B5F;
     padding-top: 12px;
-}
+} */
 
 @media (min-width: 550px) {
     .banner-rebajas {
@@ -259,14 +248,14 @@ body {
     }
 }
 
-.banner-rebajas p {
+/* .banner-rebajas p {
     text-transform: uppercase;
     font-weight: 400;
     background-color: transparent;
     color: #EAEBEB;
-}
+} */
 
-.banner-promociones {
+/* .banner-promociones {
     display: flex;
     flex-direction: column;
     padding-right: 35px;
@@ -279,7 +268,7 @@ body {
     height: 150px;
     width: auto;
     background-image: url(../multimedia/img/banner-principal-rebajas.png);
-}
+} */
 
 @media (min-width: 550px) {
     .banner-promociones {
@@ -294,28 +283,28 @@ body {
     }
 }
 
-.titulo-de-secciones {
+.contenedor-titulo-secciones {
     font-weight: 300;
     padding-top: 30px;
     margin-left: 15px;
 }
 
 @media (min-width: 550px) {
-    .titulo-de-secciones {
+    .contenedor-titulo-secciones {
         font-weight: 400;
         padding-top: 40px;
     }
 }
 
-.promociones-titulo {
+/* .banner-promociones-titulo {
     font-weight: 600;
     font-size: 45px;
     color:#D9D9D9;
    padding-top: 30px;
    margin-bottom: none;
-}
+} */
 
-.promociones-titulo-numero {
+/* .banner-promociones-titulo-numero {
     color: #D9D9D9;
     font-weight: 800;
     align-items: center;
@@ -325,14 +314,14 @@ body {
     margin-bottom: 30px;
     justify-content: end;
 
-}
+} */
 @media (min-width: 550px) {
-    .promociones-titulo {
+    .banner-promociones-titulo {
         font-size: 120px;
         font-weight: 400;
     }
 
-    .promociones-titulo-numero {
+    .banner-promociones-titulo-numero {
         font-size: 150px;
         color: #D9D9D9;
         margin-top: 50px;
@@ -341,27 +330,27 @@ body {
 
 
 
-.contenedor-de-tarjetas {
+/* .contenedor-tarjetas-producto {
     display: flex;
     flex-wrap: wrap;
-}
+} */
 
 @media (min-width:550px) {
-    .contenedor-de-tarjetas {
+    .contenedor-tarjetas-producto {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
     }
 }
 
-.carrusel-de-productos {
+/* .contenedor-tarjetas {
     width: 100%;
     margin-left: auto;
     margin-right: auto;
-}
+} */
 
-
-.chip-cesta-compra {
+/* 
+.botonchip-compra-icono {
     margin-top: -10px;
     padding: 0 15px;
     height: 30px;
@@ -375,17 +364,17 @@ body {
 }
 
 
-.chip-contenedor {
+.botonchip-compra {
     display: flex;
     justify-content: flex-end;
     margin-top: 10px;
 
 }
 
-.chip-cesta-compra:hover {
+.botonchip-compra-icono :hover {
     background: #617077;
 
-}
+} */
 
 .linea-horizontal-secciones {
     width: 100%;
@@ -399,18 +388,18 @@ body {
 
 
 
-.tarjeta-de-receta {
+/* .tarjeta-receta {
     width: 100%;
-}
+} */
 
 @media (min-width: 550px) {
-    .tarjeta-de-receta {
+    .tarjeta-receta {
         padding-left: 10px;
         padding-right: 10px;
     }
 }
 
-.imagen-tarjeta-recetas img {
+/* .tarjeta-receta-imagen img {
     height: auto;
     width: 100%;
     object-fit: cover;
@@ -419,13 +408,13 @@ body {
     margin-top: 20px;
     margin-bottom: 10;
     box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.2), 0 4px 8px 0 rgba(0, 0, 0, 0.19);
-}
+} */
 
-.icono-circle-pay {
+/* .tarjeta-receta-icono-play {
     position: absolute;
     margin-top: 100px;
     margin-left: 140px;
-}
+} */
 
 
 footer {
@@ -459,42 +448,42 @@ footer {
     color: #EAEBEB;
 }
 
-.imagen-nivel-de-receta img {
+/* .tarjeta-receta-dificultad-imagen img {
     width: 120px;
     height: auto;
     padding-left: 8px;
-}
+} */
 
 
-.contenedor-nivel-de-dificultad-recetas {
+/* .tarjeta-receta-dificultad {
     display: flex;
     align-items: center;
     flex-wrap: wrap;
-}
+} */
 
 
-.texto-tarjeta-2 {
+/* .tarjeta-receta-dificultad-texto{
     font-size: 13px;
     font-weight: 600;
     align-items: start;
     padding-top: 4px;
-}
+} */
 
-.carrusel-video-recetas {
+/* .contenedor-tarjeta {
     width: 100%;
     margin-left: auto;
     margin-right: auto;
-}
+} */
 
 
-.contenedor-tarjetas-recetas {
+/* .contenedor-tarjetas-receta {
     margin-top: 5px;
     margin-bottom: 50px;
     display: block;
-}
+} */
 
 @media (min-width:550px) {
-    .contenedor-tarjetas-recetas {
+    .contenedor-tarjetas-receta {
         display: flex;
         justify-content: space-between;
     }
@@ -503,53 +492,48 @@ footer {
 
 /* //PRODUCTO// */
 
-.navegador-paginas {
-    background-color: #2A3040;
-    display: block;
-}
+
 
 @media (min-width: 550px) {
-    .navegador-paginas {
+    .navegador {
         padding: 30px;
     }
 
 }
-
-.logo-principal-blanco img {
+/* 
+.navegador-logo img {
     width: 200px;
     height: auto;
     padding-bottom: 20px;
 }
 
-.logo-principal-blanco {
+.navegador-logo  {
     display: flex;
     justify-content: center;
-}
+} */
 
-.navegador-paginas {
+/* .navegador {
     padding-left: 15px;
     padding-right: 15px;
     padding-bottom: 20px;
-}
-
-/* .ul-contenedor {
-    display: none;
 } */
 
+
+
 @media (min-width: 550px) {
-    .ul-contenedor {
+    .navegador-ul-contenedor {
         justify-content: center;
-        /* display: flex; */
+
     }
 }
 
 @media (min-width: 550px) {
-    .logo-principal-blanco {
+    .navegador-logo  {
         display: flex;
         justify-content: flex-start;
     }
 
-    .navegador-paginas {
+    .navegador {
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -560,26 +544,26 @@ footer {
 
 
 @media (min-width: 550px) {
-    .contenedor-nav-paginas {
+    .navegador-contenedor {
         display: flex;
         align-items: center;
         justify-content: center;
     }
 }
 
-
-.menu-ham img {
+/* 
+.navegador-menu img {
     width: 35px;
 }
 
-.menu-ham-paginas {
+.navegador-menu {
     display: flex;
     display: inline-block;
     margin-bottom: -40px;
-}
+} */
 
 
-.boton-icono-nav {
+/* .navegador-boton-icono {
     border-radius: 30px 30px 30px 30px;
     border-color: transparent;
     background-color: #EAEBEB;
@@ -592,28 +576,25 @@ footer {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 4px 8px 0 rgba(0, 0, 0, 0.19);
 }
 
-.boton-icono-nav:last-child {
+.navegador-boton-icono:last-child {
     margin-right: 0;
 }
 
-.boton-icono-nav img {
+.navegador-boton-icono img {
     height: 20px;
     width: 20px;
-}
+} */
 
 @media (min-width:550px) {
-    .iconos-del-nav {
-        order: 2;
-    }
 
-    .nav-lista li a {
+    .navegador-ul-lista li a {
         text-decoration: none;
         color: #EAEBEB;
         font-size: 18px;
     }
 
 
-    .nav-lista {
+    .navegador-ul-lista {
         position: relative;
         top: 0;
 
@@ -621,34 +602,34 @@ footer {
 }
 
 
-.contendor-iconos-nav {
+/* .navegador-iconos-contenedor {
     display: flex;
     justify-content: end;
     flex-direction: row;
     /* width: 100%; */
     height: auto;
-}
+} */
 
 @media (min-width:550px) {
-    .contenedor-iconos-nav {
+    .navegador-iconos-contenedor{
         display: flex;
         justify-content: flex-end;
         margin-bottom: 0;
     }
 }
 
-.icon-menu-paginas {
+/* .icon-menu-paginas {
     width: auto;
     height: auto;
     font-size: 22px;
     color: #EAEBEB;
     display: flex;
     align-items: end;
-}
+} */
 
 
 @media (min-width:550px) {
-    .nav-lista {
+    .navegador-ul-lista {
         font-weight: 600;
         list-style-type: none;
         text-decoration: none;
@@ -663,7 +644,7 @@ footer {
         flex-direction: row;
     }
 
-    .nav-lista li {
+    .navegador-ul-lista li {
         padding: 10px;
         list-style-type: none;
         text-decoration: none;
@@ -672,9 +653,9 @@ footer {
 
 
 
-.icon-menu-paginas {
+/* .icon-menu-paginas {
     display: none !important;
-}
+} */
 
 
 
