edicion de sass en proyecto

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -122,17 +122,15 @@
     padding: 30px;
 } */
 
-@media (min-width: 550px) {
+/* @media (min-width: 550px) {
     .tarjeta-producto {
-        /* border: 1px solid;
-        border-radius: 12px;
-        border-color: #333; */
+
         padding: 16px;
         height: auto;
         max-width: 100%;
         border-bottom: none;
     }
-}
+} */
 
 /* .tarjeta-producto:hover {
     transform: scale(1.05);
@@ -146,12 +144,12 @@
     border-radius: 10px;
 } */
 
-@media (min-width: 550px) {
+/* @media (min-width: 550px) {
     .tarjeta-producto-imagen img {
         width: 100%;
         height: 200px;
     }
-}
+} */
 
 
 /* .tarjeta-producto-titulo {
@@ -189,7 +187,7 @@
 } */
 
 
-
+/* 
 @media (min-width: 550px) {
     .tarjeta-producto-texto {
         font-weight: 600;
@@ -200,7 +198,7 @@
 .texto-origen {
     font-size: 13px;
     font-weight: 600;
-}
+} */
 
 /* .tarjeta-producto-texto-origen {
     font-size: 13px;
@@ -218,7 +216,7 @@
     text-overflow: ellipsis;
 } */
 
-@media (min-width: 550px) {
+/* @media (min-width: 550px) {
     .tarjeta-producto-texto {
         font-size: 14px;
         font-weight: 500;
@@ -231,7 +229,7 @@
     font-weight: 700;
     font-size: 16px;
     color: #F06B5F;
-}
+} */
 
 /* .banner-rebajas {
     display: flex;
@@ -242,11 +240,11 @@
     padding-top: 12px;
 } */
 
-@media (min-width: 550px) {
+/* @media (min-width: 550px) {
     .banner-rebajas {
         height: 40px;
     }
-}
+} */
 
 /* .banner-rebajas p {
     text-transform: uppercase;
@@ -270,7 +268,7 @@
     background-image: url(../multimedia/img/banner-principal-rebajas.png);
 } */
 
-@media (min-width: 550px) {
+/* @media (min-width: 550px) {
     .banner-promociones {
         height: 300px;
         width: 100%;
@@ -281,9 +279,9 @@
         font-weight: 600;
         font-size: 100px;
     }
-}
+} */
 
-.contenedor-titulo-secciones {
+/* .contenedor-titulo-secciones {
     font-weight: 300;
     padding-top: 30px;
     margin-left: 15px;
@@ -294,7 +292,7 @@
         font-weight: 400;
         padding-top: 40px;
     }
-}
+} */
 
 /* .banner-promociones-titulo {
     font-weight: 600;
@@ -315,7 +313,7 @@
     justify-content: end;
 
 } */
-@media (min-width: 550px) {
+/* @media (min-width: 550px) {
     .banner-promociones-titulo {
         font-size: 120px;
         font-weight: 400;
@@ -327,7 +325,7 @@
         margin-top: 50px;
     }
 }
-
+ */
 
 
 /* .contenedor-tarjetas-producto {
@@ -335,13 +333,13 @@
     flex-wrap: wrap;
 } */
 
-@media (min-width:550px) {
+/* @media (min-width:550px) {
     .contenedor-tarjetas-producto {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
     }
-}
+} */
 
 /* .contenedor-tarjetas {
     width: 100%;
@@ -349,8 +347,8 @@
     margin-right: auto;
 } */
 
-/* 
-.botonchip-compra-icono {
+
+/* .botonchip-compra-icono {
     margin-top: -10px;
     padding: 0 15px;
     height: 30px;
@@ -376,7 +374,7 @@
 
 } */
 
-.linea-horizontal-secciones {
+/* .linea-horizontal-secciones {
     width: 100%;
     margin-left: auto;
     margin-right: auto;
@@ -384,7 +382,7 @@
     margin-bottom: 5px;
     background-color: #3F525A;
     height: 1px;
-}
+} */
 
 
 
@@ -392,12 +390,12 @@
     width: 100%;
 } */
 
-@media (min-width: 550px) {
+/* @media (min-width: 550px) {
     .tarjeta-receta {
         padding-left: 10px;
         padding-right: 10px;
     }
-}
+} */
 
 /* .tarjeta-receta-imagen img {
     height: auto;
@@ -482,24 +480,24 @@ footer {
     display: block;
 } */
 
-@media (min-width:550px) {
+/* @media (min-width:550px) {
     .contenedor-tarjetas-receta {
         display: flex;
         justify-content: space-between;
     }
-}
+} */
 
 
 /* //PRODUCTO// */
 
 
 
-@media (min-width: 550px) {
+/* @media (min-width: 550px) {
     .navegador {
         padding: 30px;
     }
 
-}
+} */
 /* 
 .navegador-logo img {
     width: 200px;
@@ -520,14 +518,14 @@ footer {
 
 
 
-@media (min-width: 550px) {
+/* @media (min-width: 550px) {
     .navegador-ul-contenedor {
         justify-content: center;
 
     }
-}
+} */
 
-@media (min-width: 550px) {
+/* @media (min-width: 550px) {
     .navegador-logo  {
         display: flex;
         justify-content: flex-start;
@@ -540,16 +538,16 @@ footer {
         padding: 0 200px;
         padding-top: 20px;
     }
-}
+} */
 
 
-@media (min-width: 550px) {
+/* @media (min-width: 550px) {
     .navegador-contenedor {
         display: flex;
         align-items: center;
         justify-content: center;
     }
-}
+} */
 
 /* 
 .navegador-menu img {
@@ -585,7 +583,7 @@ footer {
     width: 20px;
 } */
 
-@media (min-width:550px) {
+/* @media (min-width:550px) {
 
     .navegador-ul-lista li a {
         text-decoration: none;
@@ -599,24 +597,24 @@ footer {
         top: 0;
 
     }
-}
+} */
 
 
 /* .navegador-iconos-contenedor {
     display: flex;
     justify-content: end;
     flex-direction: row;
-    /* width: 100%; */
+    width: 100%;
     height: auto;
 } */
 
-@media (min-width:550px) {
+/* @media (min-width:550px) {
     .navegador-iconos-contenedor{
         display: flex;
         justify-content: flex-end;
         margin-bottom: 0;
     }
-}
+} */
 
 /* .icon-menu-paginas {
     width: auto;
@@ -628,7 +626,7 @@ footer {
 } */
 
 
-@media (min-width:550px) {
+/* @media (min-width:550px) {
     .navegador-ul-lista {
         font-weight: 600;
         list-style-type: none;
@@ -649,7 +647,7 @@ footer {
         list-style-type: none;
         text-decoration: none;
     }
-}
+} */
 
 
 
