--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -15,24 +15,90 @@
   padding-right: 15px;
   padding-bottom: 20px;
 }
-.navegador .logo {
+@media (min-width: 550px) {
+  .navegador {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-left: 100px;
+    padding-top: 20px;
+    padding-bottom: -20px;
+    padding-right: 100px;
+  }
+}
+.navegador-logo {
   display: flex;
   justify-content: center;
 }
-.navegador .logo img {
+@media (min-width: 550px) {
+  .navegador-logo {
+    display: flex;
+    justify-content: flex-start;
+  }
+}
+.navegador-logo img {
   width: 200px;
   height: auto;
   padding-bottom: 20px;
 }
-.navegador .menu {
+.navegador-menu {
   display: flex;
   display: inline-block;
   margin-bottom: -40px;
 }
-.navegador .menu img {
+.navegador-menu img {
   width: 35px;
 }
-.navegador .boton-icono {
+@media (min-width: 550px) {
+  .navegador-ul {
+    justify-content: center;
+    display: flex;
+  }
+}
+.navegador-ul-lista {
+  position: relative;
+  top: 0;
+}
+@media (min-width: 550px) {
+  .navegador-ul-lista {
+    font-weight: 600;
+    list-style-type: none;
+    text-decoration: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #2A3040;
+    width: 100%;
+    flex-direction: row;
+    position: relative;
+    top: 0;
+  }
+}
+@media (min-width: 550px) {
+  .navegador li {
+    padding: 10px;
+    list-style-type: none;
+    text-decoration: none;
+  }
+}
+@media (min-width: 550px) {
+  .navegador a {
+    text-decoration: none;
+    color: #EAEBEB;
+    font-size: 18px;
+  }
+}
+@media (min-width: 550px) {
+  .navegador-contenedor {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+.navegador-boton-icono {
   border-radius: 30px 30px 30px 30px;
   border-color: transparent;
   background-color: #EAEBEB;
@@ -44,19 +110,25 @@
   justify-content: center;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 4px 8px 0 rgba(0, 0, 0, 0.19);
 }
-.navegador .boton-icono img {
+.navegador-boton-icono img {
   height: 20px;
   width: 20px;
 }
-.navegador .boton-icono:last-child {
+.navegador-boton-icono:last-child {
   margin-right: 0;
 }
-.navegador .iconos-contenedor {
+.navegador-icono-contenedor {
   display: flex;
   justify-content: end;
   flex-direction: row;
-  /* width: 100%; */
   height: auto;
+}
+@media (min-width: 550px) {
+  .navegador-icono-contenedor {
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 0;
+  }
 }
 
 .banner-promociones {
@@ -73,15 +145,33 @@
   width: auto;
   background-image: url(../multimedia/img/banner-principal-rebajas.png);
 }
+@media (min-width: 550px) {
+  .banner-promociones {
+    height: 300px;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    justify-content: end;
+    font-weight: 600;
+    font-size: 100px;
+  }
+}
 .banner-promociones-titulo {
   font-weight: 600;
   font-size: 45px;
-  color: #D9D9D9;
+  color: #EAEBEB;
   padding-top: 30px;
   margin-bottom: none;
 }
+@media (min-width: 550px) {
+  .banner-promociones-titulo {
+    font-size: 120px;
+    font-weight: 400;
+  }
+}
 .banner-promociones-titulo-numero {
-  color: #D9D9D9;
+  color: #EAEBEB;
   font-weight: 800;
   align-items: center;
   font-size: 50px;
@@ -89,6 +179,14 @@
   margin-top: -30px;
   margin-bottom: 30px;
   justify-content: end;
+}
+@media (min-width: 550px) {
+  .banner-promociones-titulo-numero {
+    font-size: 150px;
+    color: #EAEBEB;
+    margin-top: 50px;
+    padding-right: 100px;
+  }
 }
 .banner-rebajas {
   display: flex;
@@ -98,6 +196,11 @@
   background-color: #F06B5F;
   padding-top: 12px;
 }
+@media (min-width: 550px) {
+  .banner-rebajas {
+    height: 40px;
+  }
+}
 .banner-rebajas p {
   text-transform: uppercase;
   font-weight: 400;
@@ -105,23 +208,109 @@
   color: #EAEBEB;
 }
 
+.contenedor-titulo-secciones {
+  font-weight: 300;
+  padding-top: 30px;
+  margin-left: 15px;
+}
+@media (min-width: 550px) {
+  .contenedor-titulo-secciones {
+    font-weight: 400;
+    padding-top: 40px;
+  }
+}
 .contenedor-tarjetas {
   width: 100%;
   margin-left: auto;
   margin-right: auto;
+}
+@media (min-width: 550px) {
+  .contenedor-tarjetas-receta {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+@media (min-width: 550px) {
+  .contenedor-tarjetas-producto {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
 }
 .contenedor-tarjetas-tarjeta {
   width: 100%;
   margin-left: auto;
   margin-right: auto;
 }
+@media (min-width: 550px) {
+  .contenedor-tarjetas-tarjeta-producto {
+    padding: 16px;
+    height: auto;
+    max-width: 100%;
+    border-bottom: none;
+  }
+}
+@media (min-width: 550px) {
+  .contenedor-tarjetas-tarjeta-producto-imagen img {
+    width: 100%;
+    height: 200px;
+  }
+}
+.contenedor-tarjetas-tarjeta-producto .botonchip-compra {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 10px;
+}
+.contenedor-tarjetas-tarjeta-producto .botonchip-compra-icono {
+  margin-top: -10px;
+  padding: 0 15px;
+  height: 30px;
+  color: #EAEBEB;
+  font-size: 12px;
+  border-color: transparent;
+  border-radius: 25px;
+  background-color: #3F525A;
+  font-weight: 600;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 4px 6px 0 rgba(0, 0, 0, 0.12);
+}
+.contenedor-tarjetas-tarjeta-producto .botonchip-compra-icono:hover {
+  background: #617077;
+}
 .contenedor-tarjetas-tarjeta-receta {
   margin-top: 5px;
   margin-bottom: 50px;
   display: block;
 }
+@media (min-width: 550px) {
+  .contenedor-tarjetas-tarjeta-receta {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+@media (min-width: 550px) {
+  .contenedor-tarjetas-tarjeta-receta .tarjeta-producto-texto {
+    font-size: 14px;
+    font-weight: 500;
+    margin-top: -13px;
+  }
+}
+.contenedor-tarjetas-tarjeta-receta .tarjeta-producto-texto-gramos {
+  font-weight: 700;
+  font-size: 16px;
+  color: #F06B5F;
+}
+.contenedor-tarjetas-tarjeta-receta .tarjeta-producto-texto-origen-texto-origen {
+  font-weight: 600;
+  font-size: 15px;
+}
 .contenedor-tarjetas-tarjeta-receta .tarjeta-receta {
   width: 100%;
+}
+@media (min-width: 550px) {
+  .contenedor-tarjetas-tarjeta-receta .tarjeta-receta {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
 }
 .contenedor-tarjetas-tarjeta-receta .tarjeta-receta-icono-play {
   position: absolute;
@@ -231,4 +420,14 @@
 }
 .contenedor-tarjetas-producto .tarjeta-producto .botonchip-compra-icono:hover {
   background: #617077;
+}
+
+.linea-horizontal-secciones {
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 50px;
+  margin-bottom: 5px;
+  background-color: #3F525A;
+  height: 1px;
 }/*# sourceMappingURL=estilos.css.map */
