--- a/scss/partials/_banners.scss
+++ b/scss/partials/_banners.scss
@@ -13,15 +13,31 @@
         width: auto;
         background-image: url(../multimedia/img/banner-principal-rebajas.png);
 
+        @media (min-width: 550px) {
+            height: 300px;
+            width: 100%;
+            align-items: center;
+            justify-content: center;
+            flex-direction: row;
+            justify-content: end;
+            font-weight: 600;
+            font-size: 100px;
+        }
+
         &-titulo {
             font-weight: 600;
             font-size: 45px;
-            color: #D9D9D9;
+            color: $colorblanco;
             padding-top: 30px;
             margin-bottom: none;
-    
+
+            @media (min-width: 550px) {
+                font-size: 120px;
+                font-weight: 400;
+            }
+
             &-numero {
-                color: #D9D9D9;
+                color: $colorblanco;
                 font-weight: 800;
                 align-items: center;
                 font-size: 50px;
@@ -29,10 +45,18 @@
                 margin-top: -30px;
                 margin-bottom: 30px;
                 justify-content: end;
+
+                @media (min-width: 550px) {
+                    font-size: 150px;
+                    color: $colorblanco;
+                    margin-top: 50px;
+                    padding-right: 100px;
+                }
+
             }
         }
-    }
 
+    }
 
     &-rebajas {
         display: flex;
@@ -42,6 +66,10 @@
         background-color: #F06B5F;
         padding-top: 12px;
 
+        @media (min-width: 550px) {
+            height: 40px;
+        }
+
         p {
             text-transform: uppercase;
             font-weight: 400;
@@ -50,4 +78,3 @@
         }
     }
 }
-
