--- a/scss/partials/_tarjetas.scss
+++ b/scss/partials/_tarjetas.scss
@@ -1,22 +1,131 @@
 .contenedor {
+    &-titulo {
+        &-secciones {
+            font-weight: 300;
+            padding-top: 30px;
+            margin-left: 15px;
+
+            @media (min-width: 550px) {
+                font-weight: 400;
+                padding-top: 40px;
+            }
+        }
+    }
+
     &-tarjetas {
         width: 100%;
         margin-left: auto;
         margin-right: auto;
+
+        &-receta {
+            @media (min-width: 550px) {
+                display: flex;
+                justify-content: space-between;
+            }
+
+        }
+
+        &-producto {
+            @media (min-width: 550px) {
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: space-between;
+            }
+        }
 
         &-tarjeta {
             width: 100%;
             margin-left: auto;
             margin-right: auto;
 
+            &-producto {
+                @media (min-width: 550px) {
+                    padding: 16px;
+                    height: auto;
+                    max-width: 100%;
+                    border-bottom: none;
+                }
+
+                &-imagen {
+                    img {
+                        @media (min-width: 550px) {
+                            width: 100%;
+                            height: 200px;
+                        }
+                    }
+                }
+
+                .botonchip {
+                    &-compra {
+                        display: flex;
+                        justify-content: flex-end;
+                        margin-top: 10px;
+
+                        &-icono {
+                            margin-top: -10px;
+                            padding: 0 15px;
+                            height: 30px;
+                            color: #EAEBEB;
+                            font-size: 12px;
+                            border-color: transparent;
+                            border-radius: 25px;
+                            background-color: #3F525A;
+                            font-weight: 600;
+                            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 4px 6px 0 rgba(0, 0, 0, 0.12);
+
+                            &:hover{
+                                background: #617077;
+                            }
+                        }
+                    }
+                }
+            }
+
             &-receta {
                 margin-top: 5px;
                 margin-bottom: 50px;
                 display: block;
 
+                @media (min-width: 550px) {
+                    padding-left: 10px;
+                    padding-right: 10px;
+                }
+
+
                 .tarjeta {
+
+                    &-producto {
+                        &-texto {
+                            @media (min-width: 550px) {
+                                font-size: 14px;
+                                font-weight: 500;
+                                margin-top: -13px;
+                            }
+
+                            &-gramos {
+                                font-weight: 700;
+                                font-size: 16px;
+                                color: #F06B5F;
+                            }
+
+                            &-origen {
+                                &-texto {
+                                    &-origen {
+                                        font-weight: 600;
+                                        font-size: 15px;
+                                    }
+                                }
+                            }
+                        }
+                    }
+
                     &-receta {
                         width: 100%;
+
+                        @media (min-width: 550px) {
+                            padding-left: 10px;
+                            padding-right: 10px;
+                        }
 
                         &-icono-play {
                             position: absolute;
@@ -161,4 +270,12 @@
 
 
 
-.chip-compra {}
+.linea-horizontal-secciones {
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
+    margin-bottom: 5px;
+    background-color: #3F525A;
+    height: 1px;
+}
